# APRILContent

./: .gitignore  CMakeLists.txt  ClusterCheckAlgorithm.h  README.md
cmake/: APRILContentConfig.cmake.in  APRILContentConfigVersion.cmake.in  ArborContentConfig.cmake.in  ArborContentConfigVersion.cmake.in  Findmlpack.cmake
doc/: CMakeLists.txt
docs/: APRILBFieldPlugin_8cc.html  APRILClusteringAlgorithm_8cc.html  APRILClusteringAlgorithm_8h.html  APRILContent_8h.html  APRILContent_8h_source.html  APRILInputTypes_8h_source.html  APRILMetaData_8cc.html  APRILMetaData_8h.html  APRILMetaData_8h_source.html  APRILPseudoLayerPlugin_8cc.html  APRILPseudoLayerPlugin_8h_source.html  APRILTrack_8h_source.html  AlgorithmConfiguration_8cc.html  AlgorithmConfiguration_8h.html  BDTBasedClusterIdHelper_8cc.html  BDTBasedClusterIdHelper_8h.html  BDTBasedClusterIdHelper_8h_source.html  Branch_8h.html  Branch_8h_source.html  CaloHitHelper_8cc.html  CaloHitHelper_8h.html  CaloHitHelper_8h_source.html  CaloHitMergingTool_8cc.html  CaloHitMergingTool_8h.html  CaloHitNeighborSearchHelper_8cc.html  CaloHitNeighborSearchHelper_8h.html  CaloHitNeighborSearchHelper_8h_source.html  CaloHitRangeSearchHelper_8h.html  CaloHitTimingAlgorithm_8cc.html  CaloHit_8cc.html  CaloHit_8h.html  CaloHit_8h_source.html  CaloMetric_8h.html  CaloMetric_8h_source.html  ChargedFragmentsMergingAlgorithm2_8h_source.html  ChargedFragmentsMergingAlgorithm3_8cc.html  ChargedFragmentsMergingAlgorithm3_8h.html  ChargedFragmentsMergingAlgorithm3_8h_source.html  ChargedFragmentsMergingAlgorithm_8h.html  CheatingClusterMergingAlgorithm_8h_source.html  (+483 more)
docs/html/: APRILBFieldPlugin_8h.html  APRILClusteringAlgorithm_8h_source.html  APRILContentApi_8cc.html  APRILContentApi_8h_source.html  APRILPseudoLayerPlugin_8h.html  APRILTrack_8h.html  AlgorithmConfiguration_8h_source.html  Branch_8cc.html  CaloHitPreparationAlgorithm_8h.html  CaloHitRangeSearchHelper_8cc.html  CaloHitRangeSearchHelper_8h_source.html  ChargedFragmentsMergingAlgorithm2_8cc.html  ChargedFragmentsMergingAlgorithm2_8h.html  ChargedFragmentsMergingAlgorithm_8h_source.html  CheatingClusterMergingAlgorithm_8cc.html  CheatingClusterMergingAlgorithm_8h.html  CheatingClusterMergingNewAlgorithm_8h.html  CheatingParticleIDAlgorithm_8h.html  ClusterCheckAlgorithm_8cc.html  ClusterCheckAlgorithm_8h.html  ClusterFromTrackMergingAlgorithm2_8h.html  ClusterFromTrackMergingAlgorithm_8h.html  ClusterFromTrackMergingAlgorithm_8h_source.html  ClusterHelper_8cc.html  ClusterPreparationAlgorithm_8cc.html  ClusterPropertiesFillingHelper_8cc.html  ClusterPropertiesHelper_8h_source.html  ClusterShape_8h_source.html  Cluster_8h.html  ClusteringParentAlgorithm_8cc.html  ClusteringParentAlgorithm_8h.html  ConnectorAlgorithmTool_8h_source.html  ConnectorPlusTool_8cc.html  ConnectorSeedingTool_8cc.html  ConnectorSeedingTool_8h.html  EnergyCorrectionPlugins_8cc.html  EnergyExcessReclusteringAlgorithm_8cc.html  EventPreparationAlgorithm_8h.html  GeometryHelper_8cc.html  GeometryHelper_8h_source.html  (+184 more)
docs/search/: all_65.js  all_67.js  all_6b.js  all_6c.js  all_6d.js  all_6f.js  all_70.js  all_71.js  all_72.js  all_74.js  all_75.js  classes_63.js  classes_65.js  classes_66.js  classes_68.js  classes_6b.js  classes_6d.js  classes_71.js  classes_74.js  classes_75.js  enums_61.js  enums_68.js  enums_73.js  files_62.js  files_65.js  (+23 more)
html/: APRILBFieldPlugin_8h_source.html  APRILContentApi_8h.html  APRILInputTypes_8h.html  CaloHitMergingTool_8h_source.html  CaloHitPreparationAlgorithm_8cc.html  CaloHitPreparationAlgorithm_8h_source.html  CaloHitTimingAlgorithm_8h.html  CaloHitTimingAlgorithm_8h_source.html  ChargedFragmentsMergingAlgorithm_8cc.html  CheatingClusterCleaningAlgorithm_8cc.html  CheatingClusterCleaningAlgorithm_8h.html  CheatingClusterCleaningAlgorithm_8h_source.html  CheatingClusterMergingNewAlgorithm_8cc.html  CheatingHitRecoveryAlgorithm_8h.html  CheatingTrackToClusterMatching_8h_source.html  ClosebySeedMergingAlgorithm_8cc.html  ClosebySeedMergingAlgorithm_8h.html  ClusterCheckAlgorithm_8h_source.html  ClusterEfficiencyAlgorithm_8cc.html  ClusterEfficiencyAlgorithm_8h.html  ClusterEfficiencyAlgorithm_8h_source.html  ClusterFragmentMergingAlgorithm_8cc.html  ClusterFromTrackMergingAlgorithm2_8cc.html  ClusterFromTrackMergingAlgorithm3_8h_source.html  ClusterFromTrackMergingAlgorithm4_8cc.html  ClusterFromTrackMergingAlgorithm5_8h_source.html  ClusterHelper_8h.html  ClusterPurityAlgorithm_8cc.html  ClusterShape_8cc.html  ClusterShape_8h.html  ClusterTrackEnergyFillingHelper_8cc.html  ClustersMergingAlgorithm_8cc.html  ConeBasedMergingAlgorithm_8cc.html  ConeBasedMergingAlgorithm_8h_source.html  ConnectorAlgorithmTool_8h.html  ConnectorCleaningTool_8h.html  ConnectorCleaningTool_8h_source.html  ConnectorPlusTool_8h.html  Connector_8cc.html  Connector_8h.html  (+196 more)
include/: APRILContent.h  ArborContent.h
old/: CaloHitGroupingAlgorithm.cc  CaloHitGroupingAlgorithm.h  ChargedClusterMergingAlgorithm.h  CloudClusterRemovalAlgorithm.cc  CloudClusterRemovalAlgorithm.h  ConnectorSeedingAlgorithm.cc  ConnectorSeedingAlgorithm.h  ContactClusterMergingAlgorithm.cc  ContactClusterMergingAlgorithm.h  EnergyDrivenTrackClusterAssociationAlgorithm.cc  EnergyDrivenTrackClusterAssociationAlgorithm.h  EnergyEstimateTools.h  GapCrossingConnectionAlgorithm.cc  GapCrossingConnectionAlgorithm.h  GapCrossingConnectionTool.cc  GapCrossingConnectionTool.h  GlobalConnectorCleaningAlgorithm.cc  GlobalConnectorCleaningAlgorithm.h  MuonReconstructionAlgorithm.cc  MuonReconstructionAlgorithm.h  ParticleIdPlugins.cc  ParticleIdPlugins.h  PfoMonitoringAlgorithm.cc  PfoMonitoringAlgorithm.h  PhotonReconstructionAlgorithm.cc  PhotonReconstructionAlgorithm.h  ReferenceVectorTools.cc  ReferenceVectorTools.h  ShowerProfileTools.cc  ShowerProfileTools.h  TopologicalTrackClusterAssociationAlgorithm.cc  TopologicalTrackClusterAssociationAlgorithm.h  TreeStructureAlgorithm.cc  TreeStructureAlgorithm.h  TreeStructureTool.cc  TreeStructureTool.h
weights/: ClusterTagging_BDT.weights.xml  TrackClusterAssociation_BDT.weights.xml
(+596 files in other folders)
